# rust-cpp-opencv

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  vcpkg.json
.cargo/: config.toml
include/: common.h  example.h  ffi_bridge.h  from_rust.h  itk_example.h  test_utils.h
src/: ffi_bridge.rs  lib.rs  main.cpp  main.rs
src/ffi_bridge/: bridge.rs  cv_conversion.rs  from_cpp.rs  to_cpp.rs
tests/: test_common.cpp
