[package]
name = "opencv-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "core_rlib"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
cxx = "1.0.187"
opencv = "0.97.0"

[build-dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.23.0"
cxx-build = { version = "1.0.187", features = ["parallel"] }
regex = "1.12.2"
serde_json = "1.0.145"
vcpkg = "0.2.15"
